<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context="app.rrvq.chavoapp.Main2Activity_Nivel3">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jugador"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_jugador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vidas"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/img_vidas"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/descripcion"
                    app:srcCompat="@drawable/tresvidas" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:background="@color/colorBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:id="@+id/img_compa1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/descripcion"
            app:srcCompat="@drawable/cero" />

        <ImageView
            android:id="@+id/img_operacion"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/descripcion"
            app:srcCompat="@drawable/sigmenos" />

        <ImageView
            android:id="@+id/img_comp2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/descripcion"
            app:srcCompat="@drawable/nueve" />

    </LinearLayout>

    <TextView
        android:id="@+id/caja_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>



    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_uno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/uno"
                android:padding="10dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_dos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/dos"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_tres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/tres"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_cuatro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cuatro"
                android:padding="10dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_cinco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cinco"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_seis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/seis"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_siete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/siete"
                android:padding="10dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_ocho"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/ocho"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_nueve"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/nueve"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/btn_cero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/cero"
                android:padding="10dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />



            <Button
                android:id="@+id/btn_comprobar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/btn_comprobar"
                android:textColorHint="@color/colorRojo"
                android:textSize="20sp"
                android:onClick="btn_Comprobar"/>

            <!-- <Button
                 android:id="@+id/btn_borrar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="@drawable/fondo_boton"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:hint="@string/cero"
                 android:padding="10dp"
                 android:textColorHint="@color/colorAccent"
                 android:textSize="20sp" />-->

            <ImageButton
                android:id="@+id/ib_borrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton_rojo"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/eliminar24_oscuro"
                />

        </TableRow>
    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3019606122027900/8164607199"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>